Add working case: vanilla thread
So the minimal difference is between an executor service and a thread.